<resources>
    <string name="app_name">Voice Notes</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="press_the_button_below_to_add_new_notes">Press The Button Below To Add New Notes</string>
    <string name="read_note">Read Note</string>
    <string name="lorem_ipsum_dolor_lorem">Lorem ipsum dolor lorem</string>
    <string name="date_ntime">date\ntime</string>
    <string name="deleting_note">Deleting Note…</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_not_deleted">Note not deleted!</string>
    <string name="new_note">New Note</string>
    <string name="press_the_mic_to_add_new_note">Press the mic to add new note.</string>
    <string name="_6_jul_21">6 Jul \'21</string>
    <string name="_6_15_pm">6:15 PM</string>
    <string name="settings">Settings</string>
    <string name="sync_with_google">Sync With Google</string>
    <string name="text_to_speech_settings">Text To Speech Settings</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="about">About</string>
    <string name="delete_warning">Are you sure you want to delete all notes?</string>
    <string name="all_notes_delete_success">Successfully deleted all notes!</string>
    <string name="tts_settings">TTS Settings</string>
    <string name="speech_speed">Speech Speed</string>
    <string name="speech_pitch">Speech Pitch</string>
    <string name="ok">OK</string>
    <string name="_1_0x">1.0x</string>
    <string name="sample_speech">This is an example to test speech settings.</string>
    <string name="app_settings">app_settings</string>
    <string name="speech_speed_setting">speech_speed_setting</string>
    <string name="speech_pitch_setting">speech_pitch_setting</string>
    <string name="saved">Saved</string>
</resources>