<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.tts.TTPSettingsFragment"
    android:background="@color/black_77">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxedEdges="left|top|right">

        <ImageView
            android:id="@+id/ttpSettings_logo_iv"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ttpSettings_back_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_arrow_back"
            android:fontFamily="@font/yatra_one"
            android:gravity="center_vertical"
            android:text="@string/tts_settings"
            android:textColor="@color/jasmine"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ttsSettings_guideline_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/ttsSettings_speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/yatra_one"
            android:text="@string/speech_speed"
            android:textColor="@color/white"
            android:textSize="6sp"
            app:layout_constraintBottom_toTopOf="@+id/ttsSettings_speedSub_btn"
            app:layout_constraintStart_toStartOf="@+id/ttsSettings_speedSub_btn" />

        <Button
            android:id="@+id/ttsSettings_speedSub_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/card_bg"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/ttsSettings_speechSpeed_tv"
            app:layout_constraintEnd_toStartOf="@+id/ttsSettings_guideline_gl"
            app:layout_constraintTop_toTopOf="@+id/ttsSettings_speechSpeed_tv" />

        <TextView
            android:id="@+id/ttsSettings_speechSpeed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/yatra_one"
            android:gravity="center"
            android:text="@string/_1_0x"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/ttpSettings_divider_vw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/ttsSettings_speedAdd_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/card_bg"
            android:gravity="center"
            android:text="+"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/ttsSettings_speechSpeed_tv"
            app:layout_constraintStart_toEndOf="@id/ttsSettings_guideline_gl"
            app:layout_constraintTop_toTopOf="@+id/ttsSettings_speechSpeed_tv" />

        <View
            android:id="@+id/ttpSettings_divider_vw"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/jasmine"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ttsSettings_pitch_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/yatra_one"
            android:text="@string/speech_pitch"
            android:textColor="@color/white"
            android:textSize="6sp"
            app:layout_constraintBottom_toTopOf="@+id/ttsSettings_pitchSub_btn"
            app:layout_constraintStart_toStartOf="@+id/ttsSettings_pitchSub_btn" />

        <Button
            android:id="@+id/ttsSettings_pitchSub_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/card_bg"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/ttsSettings_speechPitch_tv"
            app:layout_constraintEnd_toStartOf="@+id/ttsSettings_guideline_gl"
            app:layout_constraintTop_toTopOf="@+id/ttsSettings_speechPitch_tv" />

        <TextView
            android:id="@+id/ttsSettings_speechPitch_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/yatra_one"
            android:gravity="center"
            android:text="@string/_1_0x"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ttpSettings_divider_vw" />

        <Button
            android:id="@+id/ttsSettings_pitchAdd_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/card_bg"
            android:gravity="center"
            android:text="+"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/ttsSettings_speechPitch_tv"
            app:layout_constraintStart_toEndOf="@+id/ttsSettings_guideline_gl"
            app:layout_constraintTop_toTopOf="@+id/ttsSettings_speechPitch_tv" />

        <TextView
            android:id="@+id/ttsSettings_ok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/yatra_one"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>